Html css elkészítése a minta szerint, reszponzivitás elkezdése

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <p>Távozás dátuma:</p>
             </div>
             <div class="jobb">
-                <input type="datetime" name="erk" id="erk" value="éééé.hh.nn">
-                <input type="datetime" name="tav" id="tav" value="éééé.hh.nn">
+                <input type="date" name="erk" id="erk" value="éééé.hh.nn">
+                <input type="date" name="tav" id="tav" value="éééé.hh.nn">
             </div>
         </div>
 
@@ -30,10 +30,10 @@
                 <p>Szoba típusa:</p>
             </div>
             <div class="jobb">
-                <input type="radio" class="jobb">Egyágyas - 9.000 Ft/éj
-                <input type="radio" class="jobb">Kétágyas - 15.000 Ft/éj
-                <input type="radio" class="jobb">Egyágyas 1 pótággyal - 18.000 Ft/éj
-                <input type="radio" class="jobb">Egyágyas 2 pótággyal - 21.000 Ft/éj
+                <input type="radio" class="jobb" name="radio"><label>Egyágyas - 9.000 Ft/éj</label><br>
+                <input type="radio" class="jobb" name="radio"><label>Kétágyas - 15.000 Ft/éj</label><br>
+                <input type="radio" class="jobb" name="radio"><label>Egyágyas 1 pótággyal - 18.000 Ft/éj</label><br>
+                <input type="radio" class="jobb" name="radio"><label>Egyágyas 2 pótággyal - 21.000 Ft/éj</label>
             </div>
         </div>
         <div class="sor">
@@ -42,7 +42,7 @@
                 <p>Vendégek életkora:</p>
             </div> 
             <div class="jobb">
-                    <input type="number" value="2">fő
+                    <input type="number" value="2">fő<br>
                     <input type="select">év
                     <input type="select">év
                     <input type="select">év
@@ -56,9 +56,9 @@
         
             </div> 
             <div class="jobb">
-                    <input type="radio">Reggeli - 900 Ft/nap/fő
-                    <input type="radio">Félpanzió - 2900 Ft/nap/fő
-                    <input type="radio">Teljes panzió - 4900 Ft/nap/fő
+                    <input type="radio" name="radio2"><label>Reggeli - 900 Ft/nap/fő</label><br>
+                    <input type="radio" name="radio2"><label>Félpanzió - 2900 Ft/nap/fő</label><br>
+                    <input type="radio" name="radio2"><label>Teljes panzió - 4900 Ft/nap/fő</label>
             </div>
         </div>
         <div class="sor">
@@ -67,10 +67,10 @@
         
             </div> 
             <div class="jobb">
-                    <input type="checkbox">Beltéri medencék - 800 Ft/nap/fő
-                    <input type="checkbox">Kültéri medencék - 800 Ft/nap/fő
-                    <input type="checkbox">Szauna belépő - 800 Ft/nap/fő
-                    <input type="checkbox">Teljes belépő - 2000 Ft/nap/fő
+                    <input type="checkbox"><label>Beltéri medencék - 800 Ft/nap/fő</label><br>
+                    <input type="checkbox"><label>Kültéri medencék - 800 Ft/nap/fő</label><br>
+                    <input type="checkbox"><label>Szauna belépő - 800 Ft/nap/fő</label><br>
+                    <input type="checkbox"><label>Teljes belépő - 2000 Ft/nap/fő</label>
             </div>
         </div>
         <div class="sor">
