Javascript fejlesztése, vendégek száma és összköltség befejezése

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 <p>Vendégek életkora:</p>
             </div> 
             <div class="jobb">
-                    <input type="number" value="2" id="vendegekszama">fő<br>
-                    <input type="select">év
-                    <input type="select">év
-                    <input type="select">év
-                    <input type="select">év
+                    <input type="number" value="2" id="vendegekszama" min="1" max="4">fő<br>
+                    <input type="select" id="eletkor1" min="0">év
+                    <input type="select" id="eletkor2" min="0">év
+                    <input type="select" id="eletkor3" min="0">év
+                    <input type="select" id="eletkor4" min="0">év
             </div>
         </div>
 
